# job-hunters

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: setup-guide.md
examples/knowledge/: companies.csv  company-source-queries.yaml  profile.yaml  search-criteria.md
knowledge/: companies.csv  company-source-queries.yaml  search-criteria.md
knowledge/profile/: general-info.md  personal-projects.md  profile-summary.md  public-performance.md  values-and-interests.md  work-experience.md
personalized-outreach/: README.md  SKILL.md
personalized-outreach/best-practices/: cover-letter.md  cv.md
personalized-outreach/scripts/: fill-template.js  fill-template.ts
personalized-outreach/templates/: cover-letter.md  cv-template.md
src/job_hunting/: application_artifacts.py  config.py  crew.py  main.py  models.py  profile_context.py  utils.py
tests/: conftest.py  test_application_artifacts.py  test_application_crew_config.py  test_application_flow.py  test_career_page_resolver.py  test_company_candidate_store.py  test_company_public_search.py  test_company_query_planner.py  test_company_sourcing_flow.py  test_company_sourcing_tools.py  test_cover_letter_tool.py  test_cv_generator.py  test_discovery_coverage.py  test_discovery_crew_config.py  test_discovery_flow.py  test_main_prerequisites.py  test_models.py  test_prep_vacancy_flow.py  test_profile_context.py  test_safe_selenium_scraper.py  test_telegram_bot_callbacks.py  test_telegram_bot_company_candidates.py  test_telegram_bot_prep_vacancy.py  test_telegram_notifier.py  test_utils.py
(+53 files in other folders)
